# Delivery-Duration-Prediction---DoorDash

./: .gitignore  Makefile  README.md  requirements.txt
Delivery Duration Prediction, DoorDash, 2015/: .gitignore  pyproject.toml
Delivery Duration Prediction, DoorDash, 2015/docs/: mkdocs.yml
Delivery Duration Prediction, DoorDash, 2015/models/: best_xgboost_model.pkl
Delivery Duration Prediction, DoorDash, 2015/notebooks/: 00 Assignment.ipynb  01 EDA.ipynb
docs/docs/: index.md
notebooks/: 02_Preproccessing.ipynb  03_Model_Training.ipynb  04 Deep_Learning_Model.ipynb
