[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "delivery_duration_prediction,_doordash,_2015"
version = "0.0.1"
description = "build a model to predict the estimated time taken for a deliverry"
authors = [
  { name = "Diego Velez" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.6"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["delivery_duration_prediction,_doordash,_2015"]
force_sort_within_sections = true
